# hlm12nli

./: .pre-commit-config.yaml  README.md  pyproject.toml
dev/: data.ipynb  vocab.ipynb
src/hlm12nli/: config.py  data.py  encoder.py  encoding.py  joint.py  tokenisation.py  trainer.py  training.py
src/hlm12nli/modelling/: __init__.py  config.py  encoder.py  output.py  tokenizer.py  vocab.py
src/hlm12nli/tokenisation/: __init__.py  config.py  exceptions.py  joiner.py  joining.py  output.py  splitter.py  tokeniser.py  tokenizer.py  vocab.py
src/hlm12nli/training/: triplet.py
tests/: test_encoder.py  test_tokeniser.py  test_trainer.py
tests/fixtures/: vocab.txt
tests/modelling/: test_encoder.py  test_tokenizer.py
tests/tokenisation/: test_tokeniser.py
tests/training/: test_triplet.py
