[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "hlm12nli"
version = "0.0.1"
authors = [{ name = "Hudson Mendes", email = "hlm12@student.london.ac.uk" }]
description = "NLI model trained on the SNLI dataset using triplet loss."
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/hudsonmendes/hlm12nli" }
keywords = ["nlu", "snli", "sentence-embeddings"]
dependencies = ["lightning>=2.3.3", "numpy<2"]

[project.optional-dependencies]
dev = ["pre-commit>=3.8.0", "black[jupyter]>=24.4.2", "isort>=5.13.2"]
test = ["pytest>=7.4.0", "hypothesis>=6.84.2"]
etl = []
tokenisation = []
modelling = []
training = ["datasets>=2.20.0"]
serving = []

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
line_length = 160
src_paths = ["dev", "src", "tests"]
known_third_party = ["lightning", "torch"]
known_first_party = [""]
import_heading_stdlib = "Python Built-in Modules"
import_heading_thirdparty = "Third-Party Libraries"
import_heading_firstparty = "My Packages and Modules"
import_heading_localfolder = "Local Folders"
